--- a/json/app.json
+++ b/json/app.json
@@ -7,7 +7,7 @@
       "appShortDescription": "واتساب الذهبي",
       "requireMicroG": false,
       "latestVersionUrl": "https://github.com/rvapps/rv.net/releases/download/2024-18/rv.net_rv_manager_v1.9.25.apk",
-      "icon": "https://rv.net/assets/img/apps/thumbs/com.rv.net.rvmanager.64.webp",
+      "icon": "https://goldnwhats.app/wp-content/uploads/2023/03/واتساب-الذهبي.webp",
       "index": 0
     }
   ]
