--- a/json/app.json
+++ b/json/app.json
@@ -6,7 +6,7 @@
       "latestVersionCode": "1.9.25",
       "appShortDescription": "واتساب الذهبي",
       "requireMicroG": false,
-      "latestVersionUrl": "https://github.com/rvapps/rv.net/releases/download/2024-18/rv.net_rv_manager_v1.9.25.apk",
+      "latestVersionUrl": "https://goldnwhats.app/wp-content/uploads/2023/03/واتساب-الذهبي.webp",
       "icon": "https://goldnwhats.app/wp-content/uploads/2023/03/واتساب-الذهبي.webp",
       "index": 0
     }
